--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">;
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Random Quote Machine</title>
 </head>
@@ -11,9 +12,7 @@
         <div class="wrapper">
           <div class="content">
             <h1>Random Quote Machine</h1>
-                <div class="item">
-                    <p>Random Quote goes here!</p>
-                </div>
+                <div class="item"></div>
                     <button id="quote-button" class="btn btn-primary">New Quote</button>
                     <button id="tweet-button" class="btn btn-primary">Tweet</button>
                 </div>
