created function to tweet quote

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
           <div class="content">
             <h1>Random Quote Machine</h1>
                 <div class="item"></div>
+                <div class="author"></div>
                     <button id="quote-button" class="btn btn-primary">New Quote</button>
-                    <button id="tweet-button" class="btn btn-primary">Tweet</button>
+                    <a class="tweet-button"><button class="btn btn-primary">Tweet</button></a>
                 </div>
                 <p>By James</p>
             </div>
