Updated to use the fetch API

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <button id="quote-button" class="btn btn-primary">New Quote</button>
                     <a class="tweet-button"><button class="btn btn-primary">Tweet</button></a>
                 </div>
-                <p>By James</p>
+                <p>By James Hattersley</p>
             </div>
         </div>
     </div>
